fix to make font standard inside the competition-overview.component.css before it was smaller and lines too close to each other. may want to revisit photogallery in firefox to make sure its up to standard

--- a/src/app/competition-overview/competition-overview.component.css
+++ b/src/app/competition-overview/competition-overview.component.css
@@ -1,11 +1,15 @@
 p{
   padding-left:10%;
+  font-size: 1.2rem;
+  line-height: 30px;
+
+
 }
 h2{
   padding-left:10%;
 }
 hr{
- height:0px;
+ height:0;
   border-color:black;
   border-width: 2px;
 }
